--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,7 +8,7 @@ import { Base } from "../downstream/Base";
 import { home } from "../data/home";
 
 export default () => (
-  <Base head={home.head} background={home.background}>
+  <Base head={home.head} background={home.background} noBackButton>
     <h1>Hello, world!</h1>
   </Base>
 );
