feat(site): Add background gradient

--- a/src/pages/imprint.mdx
+++ b/src/pages/imprint.mdx
@@ -14,25 +14,25 @@ export default ({ children }) => (
   </Base>
 );
 
+# Imprint/Impressum
+
 <Divider horizontal inverted={common.dark}>
   <Flag name="us" /> English
 </Divider>
 
-# Imprint
-
-## Data according to § 5 TMG:
+## Data according to § 5 TMG
 
 Felix Pojtinger
 Personal Site
 Hirschkopfweg 8
 72270 Baiersbronn
 
-## Contact:
+## Contact
 
 Phone: 07442/50938
 E-Mail: felix@pojtinger.com
 
-## Responsible for the content according to § 55 Section 2 RStV:
+## Responsible for the content according to § 55 Section 2 RStV
 
 Felix Pojtinger
 Hirschkopfweg 8
@@ -67,21 +67,19 @@ As far as the contents on this site were not created by the operator, the copyri
   <Flag name="de" /> Deutsch
 </Divider>
 
-# Impressum
-
-## Angaben gemäß § 5 TMG:
+## Angaben gemäß § 5 TMG
 
 Felix Pojtinger
 Personal Site
 Hirschkopfweg 8
 72270 Baiersbronn
 
-## Kontakt:
+## Kontakt
 
 Telefon: 07442/50938
 E-Mail: felix@pojtinger.com
 
-## Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:
+## Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV
 
 Felix Pojtinger
 Hirschkopfweg 8
