feat(site): Add article layout

--- a/src/articles/2019-01-17-on-free-software.mdx
+++ b/src/articles/2019-01-17-on-free-software.mdx
@@ -1,18 +1,31 @@
 ---
+title: On Free Software
 author: Felix Pojtinger
 excerpt: Free as in Freedom, not in Price!
-imgSrc: /img/bg.jpg
-imgAlt: A placeholder image
+imgSrc: "/img/on-free-software-header.jpg"
+imgAlt: '"Round open neon" by Finn Hackshaw on Unsplash'
 lastEdit: "2019-01-18"
 date: "2019-01-18"
 featured: false
 ---
 
-# On Free Software
+```javascript
+const openSource = true;
+const openGoverance = true;
+const copyleft = true;
+
+if (openSource && openGoverance && copyleft) {
+  console.log("FLOSS is implemented!");
+}
+```
 
 Non nihil et quaerat commodi. Repellendus nulla aut magni ea. Est fugit sint reprehenderit occaecati.
 
 Explicabo mollitia incidunt molestias. Voluptas minima et laboriosam suscipit rerum. Architecto beatae sequi non unde tempore.
+
+- Open Source
+- Open Governance
+- Copyleft
 
 Ut sit qui amet officia quam. Fuga esse aliquam temporibus praesentium ut hic dolor laborum. Placeat placeat ipsum autem aut omnis dolores. Minus odit accusantium aut. Sapiente ipsam quibusdam libero et ratione vel dolore.
 
