feat(site): Add article list

--- a/src/articles/2019-01-17-on-free-software.mdx
+++ b/src/articles/2019-01-17-on-free-software.mdx
@@ -6,7 +6,7 @@ imgSrc: "/img/on-free-software-header.jpg"
 imgAlt: '"Round open neon" by Finn Hackshaw on Unsplash'
 lastEdit: "2019-01-18"
 date: "2019-01-18"
-featured: false
+article: true
 ---
 
 ```javascript
