--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -9,11 +9,16 @@ import { home } from "../data/home";
 import { Header } from "../downstream/Header";
 import { Links } from "../downstream/Links";
 import { Skills } from "../downstream/Skills";
+import { Articles } from "../downstream/Articles";
+import { Container } from "@libresat/frontend-components";
 
 export default () => (
-  <Base head={home.head} background={home.background} noBackButton>
-    <Header {...home.content.header} />
-    <Links links={home.content.links} />
-    <Skills {...home.content.skills} />
+  <Base head={home.head} background={home.background} noBackButton noContainer>
+    <Container>
+      <Header {...home.content.header} />
+      <Links links={home.content.links} />
+      <Skills {...home.content.skills} />
+    </Container>
+    <Articles />
   </Base>
 );
