--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -9,8 +9,9 @@ import { home } from "../data/home";
 import { Header } from "../downstream/Header";
 import { Links } from "../downstream/Links";
 import { Skills } from "../downstream/Skills";
-import { Articles } from "../downstream/Articles";
 import { Container } from "@libresat/frontend-components";
+import { Articles } from "../downstream/Articles";
+import { Projects } from "../downstream/Projects";
 
 export default () => (
   <Base head={home.head} background={home.background} noBackButton noContainer>
@@ -20,5 +21,6 @@ export default () => (
       <Skills {...home.content.skills} />
     </Container>
     <Articles />
+    <Projects projects={home.content.projects} />
   </Base>
 );
