feat(site): Use WebP for everything

--- a/src/articles/2019-01-17-on-free-software.mdx
+++ b/src/articles/2019-01-17-on-free-software.mdx
@@ -2,7 +2,7 @@
 title: On Free Software
 author: Felicitas Pojtinger
 excerpt: Free as in Freedom, not in Price!
-imgSrc: "/img/on-free-software-header.jpg"
+imgSrc: "/img/on-free-software-header.webp"
 imgAlt: '"Round open neon" by Finn Hackshaw on Unsplash'
 lastEdit: "2019-01-18"
 date: "2019-01-18"
