refactor: Fix light and dark mode

--- a/src/pages/imprint.mdx
+++ b/src/pages/imprint.mdx
@@ -16,7 +16,7 @@ export default ({ children }) => (
 
 # Imprint/Impressum
 
-<Divider horizontal inverted={common.dark}>
+<Divider horizontal inverted={common.dark()}>
   <Flag name="us" /> English
 </Divider>
 
@@ -63,7 +63,7 @@ See "Media License" and "Code License". The code of this website is licensed AGP
 
 As far as the contents on this site were not created by the operator, the copyrights of third parties are protected. observed. In particular, the contents of third parties are marked as such. If you should nevertheless click on If you become aware of a copyright infringement, we ask you to inform us accordingly. On becoming known we will remove such contents immediately.
 
-<Divider horizontal inverted={common.dark}>
+<Divider horizontal inverted={common.dark()}>
   <Flag name="de" /> Deutsch
 </Divider>
 
