--- a/src/articles/2019-02-06-product-oriented.mdx
+++ b/src/articles/2019-02-06-product-oriented.mdx
@@ -2,7 +2,7 @@
 title: The Product Oriented Approach
 author: Felicitas Pojtinger
 excerpt: Yet another way of structuring one's projects.
-imgSrc: "/articles/on-free-software-header.webp"
+imgSrc: "../assets/articles/on-free-software-header.webp"
 imgAlt: '"Round open neon" by Finn Hackshaw on Unsplash'
 lastEdit: "2019-02-06"
 date: "2019-02-06"
@@ -60,21 +60,21 @@ Infrastructure/ (#infrastructure, t/infrastructure, packages/infrastructure, doc
 
 AppsCode does [exactly this](https://appscode.com/products/searchlight/):
 
-![Screenshot of AppsCode product page](/articles/appscode-searchlight.webp)
+![Screenshot of AppsCode product page](../assets/articles/appscode-searchlight.webp)
 
 [MicroK8s](https://microk8s.io/) also links to their code, forum and chat, all in a lightweight "multi-tenant" fashion, just like we should do it; MicroK8s even has it's own site:
 
-![MicroK8s landing page](/articles/microk8s-landing.webp)
+![MicroK8s landing page](../assets/articles/microk8s-landing.webp)
 
-![MicroK8s forum](/articles/microk8s-forum.webp)
+![MicroK8s forum](../assets/articles/microk8s-forum.webp)
 
-![MicroK8s chat link](/articles/microk8s-chat-link.webp)
+![MicroK8s chat link](../assets/articles/microk8s-chat-link.webp)
 
-![MicroK8s chat](/articles/microk8s-chat.webp)
+![MicroK8s chat](../assets/articles/microk8s-chat.webp)
 
 It is however very important that the forum and chat are highlighted; this makes the end-user much more likely to "join the community". See the [AppsCode landing page](https://appscode.com/):
 
-![Screenshot of the AppsCode landing page](/articles/appscode-landing.webp)
+![Screenshot of the AppsCode landing page](../assets/articles/appscode-landing.webp)
 
 In addition to that, the chat, forum and GitLab should integrate tightly. Because the projects are managed using the site, no direct link to the GitLab organization should be provided. There must not be a "blog", but there should rather be an "Announcements" tag in the forum. From personal experience, that is how I got interested in contributing to projects (in particular, the `Communitheme` for Ubuntu, although I feel different about that nowadays).
 
@@ -103,6 +103,6 @@ Cluster Platform        Devices  Modules  Infrastructure  Operations  Developmen
 
 A simple mockup has been created to visualize this idea:
 
-![Mockup](/articles/alphahorizon-landing.webp)
+![Mockup](../assets/articles/alphahorizon-landing.webp)
 
 This way also makes it possible to do things such as full-fledged sub pages for each product. Even though we are referring to the whole as a "platform", the UNIXy-approach is still implemented, but it is much easier for beginners to go through the whole onboarding process.
