fix(site): Fix typos in new article

--- a/src/articles/2019-09-14-sane-categories.mdx
+++ b/src/articles/2019-09-14-sane-categories.mdx
@@ -9,7 +9,7 @@ date: "2019-09-14"
 article: true
 ---
 
-So I tried to set up my a homelab. This has been a thing that I wanted to do for a long time now; I've got some older `VT-d` capable `x86_64` laptops and desktops laying around at home gathering dust. This even includes my trusty and quite powerful former gaming PC which could serve as a useful compute node. In addition to that, my cloud computing costs have skyrocketed over the last few months, rising ~10 € per month up to nearly 40 € last month. As a student, I simply couldn't afford using this system from that point onwards.
+So I tried to set up a homelab. This has been a thing that I wanted to do for a long time now; I've got some older `VT-d` capable `x86_64` laptops and desktops laying around at home gathering dust. This even includes my trusty and quite powerful former gaming PC which could serve as a useful compute node. In addition to that, my cloud computing costs have skyrocketed over the last few months, rising ~10 € per month up to nearly 40 € last month. As a student, I simply couldn't afford using this system from that point onwards.
 
 So, a homelab needed to be built then. But how - and how did I get it on to the public internet? This is not actually what this post is going to be about, although I'll be sure to write about in the future. This post is going to about _how_ such a homelab or any modern cloud should be deployed in a sane system - such as the [Cluster Platform (CTPF)](https://gitlab.com/clusterplatform/clusterplatform).
 
